# wexiv

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/: compilerFlags.cmake  findDependencies.cmake  generateConfigFile.cmake  mainSetup.cmake
include/exiv2/: basicio.hpp  bmffimage.hpp  bmpimage.hpp  config.h  cr2image.hpp  crwimage.hpp  datasets.hpp  easyaccess.hpp  epsimage.hpp  error.hpp  exif.hpp  exiv2lib_export.h  exv_conf.h  gifimage.hpp  image.hpp  iptc.hpp  jp2image.hpp  jpgimage.hpp  metadatum.hpp  mrwimage.hpp  orfimage.hpp  pgfimage.hpp  photoshop.hpp  pngimage.hpp  psdimage.hpp  rafimage.hpp  rw2image.hpp  slice.hpp  tags.hpp  tgaimage.hpp  tiffimage.hpp  types.hpp  value.hpp  version.hpp  webpimage.hpp  wexiv.hpp  xmp_exiv2.hpp
src/: CMakeLists.txt  basicio.cpp  bmffimage.cpp  bmpimage.cpp  canonmn_int.cpp  canonmn_int.hpp  casiomn_int.cpp  casiomn_int.hpp  cr2header_int.cpp  cr2header_int.hpp  cr2image.cpp  crwimage.cpp  crwimage_int.cpp  crwimage_int.hpp  datasets.cpp  easyaccess.cpp  enforce.hpp  epsimage.cpp  error.cpp  exif.cpp  fujimn_int.cpp  fujimn_int.hpp  gifimage.cpp  helper_functions.cpp  helper_functions.hpp  image.cpp  image_int.cpp  image_int.hpp  iptc.cpp  jp2image.cpp  jp2image_int.cpp  jp2image_int.hpp  jpgimage.cpp  makernote_int.cpp  makernote_int.hpp  metadatum.cpp  minoltamn_int.cpp  minoltamn_int.hpp  mrwimage.cpp  nikonmn_int.cpp  (+51 more)
